# news-digest-engine

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  cli.py  dashboard.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
deploy/: __init__.py  main.py
src/: __init__.py  briefing.py  config.py  feed_reader.py  monitor.py  news_engine.py  ranker.py  summarizer.py
tests/: __init__.py  test_feed_reader.py  test_ranker.py  test_summarizer.py
